# yjy_usv_ros2_cxz

./: .gitignore  README.md  readme.md
DEVLOGS/simulation/: fix_surge_damping_coefficient_Xu.md
DevLogs/: README.md
DevLogs/01_Integration/: Level_Migration.md
DevLogs/02_Blueprint_Issues/: BP_Compile_Errors.md
DevLogs/04_Simulation/: GM_Negative_Natural_Frequency_NaN_Issue.md  Ship_Propeller_Trajectory_Issue.md  Simulink_UE5_Performance_Analysis.md  UE5_Simulink_Interface.md  UE5_Slate_Array_Index_Crash.md  differential_steering_verification_table.md
DevLogs/04_Simulation/img/: README.md
DevLogs/05_CSDN_UE5_Column/: README.md
DevLogs/05_CSDN_UE5_Column/posts/: 2025-06-04__ue5-actor-pose-read-write.md  2025-06-04__ue5-cpp-class-to-blueprint-integration.md  (+11 more)
DevLogs/07_Linux_System_Issues/: GDM启动失败与磁盘空间不足故障排查.md
ReadMe/: 01_软件需求规格说明书.md  02_软件配置管理计划.md  03_软件自测试报告.md  04_项目开发总结报告.md  05_用户手册.md  06_软件产品规格书.md  Infomation Introduction
docs/: architecture.md  overview.md  usage.md
docs/simulink/: CO坐标系原点位置.md  Inertials变量来源说明.md  Kinematics运动学模块分析.md  Output_Processing模块分析.md  Overview_Model.md  Simulink模型参数解析.md  Thrust模块.md  Waves and Crossflow模块解析.md  coriolis_force_module_analysis.md  damping_module_analysis.md  dynamics_equation_simulink_correspondence.md  仿真变量参考.md  六自由度模块分析.md  吃水深度计算原理.md  坐标系统定义.md  有关提示词汇总.md  船体水动力参数获取方法.md  船体规格参数.md  输入处理与弹簧刚度矩阵分析.md  阻尼模块分析.md
docs/ue5/: Overview_ue5.md  UE5_BBox_Projection.md
src/: ROS2_simulink_UE5_0821.slx  ROS2_simulink_UE5_260106.slx
src/control_planner/: package.xml  setup.cfg  setup.py
src/pid_interfaces/: CMakeLists.txt  package.xml
src/pid_interfaces/msg/: Command.msg
(+140 files in other folders)
