<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid_interfaces</name>
  <version>0.0.0</version>
  <description>Interface definitions for USV control</description>
  <maintainer email="usv-6081@todo.todo">usv-6081</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 消息生成依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- 运行时依赖：让其他包能用你的消息 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 如果你的 msg 使用了 std_msgs 类型，就加这个（这里保留） -->
  <depend>std_msgs</depend>

  <!-- 测试工具（可选） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
